--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "node-js-getting-started",
   "version": "0.1.5",
@@ -8,8 +7,10 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "babel": "^6.3.26",
     "ejs": "2.3.3",
-    "express": "4.13.3"
+    "express": "4.13.3",
+    "pg": "4.x"
   },
   "engines": {
     "node": "0.12.7"
@@ -23,6 +24,9 @@
     "heroku",
     "express"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.2"
+  }
 }
-
